fix: enhance visibility in small screens

--- a/src/components/shared/DevfolioBtn.css
+++ b/src/components/shared/DevfolioBtn.css
@@ -69,3 +69,12 @@ button.clicked {
     border-radius: 10px;
   }
 }
+
+@media (max-width: 320px) {
+  button {
+    font-size: 15px;
+    padding: 15px 24px;
+    box-shadow: #c48dff 1px 1px, #ff8cd9 2px 2px, #35e1ff 3px 3px;
+    border-radius: 10px;
+  }
+}
